--- a/public/assets/css/style1.css
+++ b/public/assets/css/style1.css
@@ -5,7 +5,7 @@
 
 body {
     width: 100%;
-    background-color: #3f4453;
+    background-color: #074173;
     font-family: 'Montserrat', sans-serif;
 }
 
@@ -15,8 +15,8 @@ body {
     left: 0;
     top: 0;
     bottom: 0;
-    width: 196px;
-    background-color: #3f4453;
+    /* width: 196px; */
+    background-color: #074173;
     padding: 24px;
 }
 .sidebar .logo img {
@@ -59,12 +59,12 @@ body {
 .topbar {
     position: fixed;
     top: 0;
-    left: 246px;
+    left: 180px;
     right: 0;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #101010;
+    background-color: rgba(255, 255, 255, 0.5);
     padding: 10px 20px;
     z-index: 1000;
 }
@@ -121,7 +121,7 @@ body {
 
 .topbar .navbar ul li.divider {
     color: #ffffff;
-    font-size: 26px;
+    font-size: 20px;
     margin: 0px 20px;
     width: auto;
 }
@@ -131,24 +131,30 @@ body {
     color: #000000;
     font-size: 10px;
     font-weight: bold;
-    padding: 14px 30px;
+    padding: 14px 25px;
     border: 0px;
     border-radius: 40px;
     cursor: pointer;
     margin-left: 20px;
+    transition: .3s ease;
+
 }
 
 .topbar .navbar button:hover,
 .topbar .navbar button:active{
     background-color: #0056b3;
+    color: #fff;
+
 }
 .main-container {
-    margin-top: 70px;
-    margin-left: 245px;
+    margin-top: 60px;
+    margin-left: 180px;
     margin-bottom: 100px;
+    
 }
 .main-slider {
     padding: 20px 40px;
+    margin-right: 300px;
 }
 
 .main-slider h2 {
@@ -167,10 +173,11 @@ body {
     min-width: 140px;
     width: 160px;
     padding: 15px;
-    background-color: #181818;
     border-radius: 6px;
-    cursor: pointer;
-    transition: all ease 0.4s;
+    background: linear-gradient(50deg,
+            #0d0a36 0%,
+            rgba(74, 74, 74, 0) 100%);
+    transition: 0.5s all ease;
 }
 
 .main-slider .list .item:hover {
@@ -207,12 +214,12 @@ body {
 .main-container .menu-side {
     position: fixed;
     border: 1px solid #ffff;
-    margin-top: 60px;
+    margin-top: 70px;
     right: 0;
     top: 0;
     bottom: 0;
     width: 290px;
-    background-color: #3f4453;
+    background-color: #074173;
     /* padding: 10px; */
     overflow: auto;
 }
@@ -220,12 +227,13 @@ body {
     position: sticky;
     top: 0;
     z-index: 1;
+    font-weight: 600;
     display: flex;
     align-items: center;
     justify-content: space-between;
     height: 7%;
     padding: 10px;
-    background: #000000;
+    background-color: rgba(255, 255, 255, 0.5);
 }
 .main-container .menu-side .menu-button .button{
     flex: 1;
@@ -235,17 +243,19 @@ body {
 .recent_button {
     width: 100%;
     padding: 5px;
-    background-color: #4c5262;
-    color: #000000;
+    color: #fff;
     border-radius: 40px;
+    font-weight: 600 ;
     cursor: pointer;
     outline: none;
-    background: #f6ef77;
+    background-color: rgba(77, 93, 232, 0.5);
+    transition: 0.3 all ease;
 }
 
 .playlist_button:hover,
 .recent_button:hover {
-    background-color: #3b3f44;
+    background-color: #074173;
+    transition: 0.3 all ease;
 }
 .menu-side .menu-song::-webkit-scrollbar{
     /* display:none; */
@@ -259,7 +269,7 @@ body {
 .menu-song li {
     list-style: none;
     position: relative;
-    padding: 20px 5px 0px 0px;
+    padding: 10px 5px 5px 5px;
     display: flex;
     align-items: center;
     margin-bottom: 10px;
@@ -267,7 +277,7 @@ body {
     transition: .3s linear;
 }
 .menu-song li:hover {
-    background: rgb(105, 105, 105);
+    background: rgb(148, 166, 254);
 }
 .menu-song li span {
     font-size: 12px;
@@ -284,7 +294,7 @@ body {
     color: #ffff;
     margin-left: 15px;
     width: 170px;
-    border: 1px solid #ffff;
+    /* border: 1px solid #ffff; */
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
