--- a/public/assets/css/preview.css
+++ b/public/assets/css/preview.css
@@ -11,9 +11,9 @@
     padding: 5px 5px;
 }
 .preview img {
-    width: 10%;
-    width: 35px;
-    height: 35px;
+    width: 15%;
+    width: 40px;
+    height: 40px;
 }
 .preview h2{
     width: 20%;
@@ -30,7 +30,7 @@
     white-space: nowrap;
 }
 .preview .icon {
-    width: 10%;
+    width: 5%;
     border: 1px solid #ffff;
     font-size: 35px;
     color: #ffff;
@@ -55,9 +55,9 @@
 }
 .preview .container-audio{
     width: 60%;
-    border: 1px solid #ffff;
+    /* border: 1px solid #ffff; */
     height: auto;
-    padding: 20px;
+    /* padding: 20px; */
     overflow: hidden;
 }
 audio {
