--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,7 +1,5 @@
 
-@font-face{
-	font-family: lato, sans-serif, tahoma;
-}
+
 
 *{
 	box-sizing: border-box;
@@ -16,6 +14,7 @@ body{
 	font-family: lato, sans-serif, tahoma;
 	margin:0px;
 	padding: 0px;
+	background-color: #F6F5F5;
 
 }
 
@@ -26,8 +25,8 @@ body a{
 
 header{
 	display: flex;
-	background: linear-gradient(to right, #fff 0%, #e1ddf5 100%, #000 100%);	
 	padding: 10px 20px;
+	background-color: rgba(255, 255, 255, 0.6);
 }
 
 .alert{
@@ -69,14 +68,27 @@ header{
 	color: white;
 
 }
-
+.nav-item a:link {
+    color: initial;
+    text-decoration: none; /* Remove underline from links */
+}
 .main-title{
 	padding: 10px;
 	display: flex;
 }
+.dropdown:hover .dropdown-list {
+    display: block; /* Show dropdown list when hovering over dropdown */
+}
 
+.dropdown-list {
+    position: absolute;
+    border: solid thin #ccc;
+    background-color: white;
+    margin-top: 10px;
+    display: none; /* Hide dropdown list by default */
+}
 header .active{
-	border-bottom: solid 4px #120b80;
+	border-bottom: solid 4px #67C6E3;
 	
 }
 header .active a{
@@ -96,14 +108,18 @@ header .active a{
 
 .dropdown-list{
 	position: absolute;
-	border: solid thin #ccc;
+	border: solid thin #67C6E3;
 	background-color: white;
 	margin-top:10px;
+}
+.dropdown:hover .dropdown-list{
+	display: block;
 }
 
 .hero{
 	height: 500px;
 	object-fit: cover;
+	background-position: center;
 }
 
 .content{
@@ -126,7 +142,7 @@ header .active a{
 .music-card{
 	width: 200px;
 	margin:20px;
-	background-color: #160075;
+	background-color: #008DDA;
 	border-radius: 10px;
 	color: white;
 }
@@ -287,3 +303,81 @@ header .socials{
 	}
 }
 
+.login-container {
+	max-width: 400px;
+	margin: 0 auto;
+	padding: 20px;
+	border: 1px solid #ccc;
+	border-radius: 10px;
+	background-color: #fff;
+	box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+	opacity: 1;
+
+}
+
+.login-container form {
+	text-align: center;
+	padding: 10px 0;
+	border-bottom: 1px solid silver;
+}
+
+.login-container h2 {
+	text-align: center;
+	border-bottom: 1px solid silver;
+	padding-bottom: 10px;
+}
+
+.login-container input[type="text"],
+.login-container input[type="password"] {
+	width: 100%;
+	margin-bottom: 15px;
+	padding: 10px;
+	border: 1px solid #ccc;
+	border-radius: 5px;
+	box-sizing: border-box;
+}
+
+.login-container button {
+	width: 100%;
+	padding: 10px;
+	border: none;
+	border-radius: 5px;
+	background-color: #174b8b;
+	color: #fff;
+	cursor: pointer;
+}
+
+.login-container button:hover {
+	background-color: darkblue;
+	transition: all 0.3s;
+}
+
+.alert {
+	margin-bottom: 20px;
+	padding: 10px;
+	background-color: white;
+	border: 1px solid #f5c6cb;
+	border-radius: 5px;
+	color: #721c24;
+}
+
+.txt_field input {
+	width: 100%;
+	padding: 0 5px;
+	height: 40px;
+	font-size: 16px;
+	border: none;
+	background: none;
+	outline: none;
+}
+
+.txt_field input:focus~label,
+.txt_field input:valid~label {
+	top: -5px;
+	color: #2691d9;
+}
+
+.txt_field input:focus~span::before,
+.txt_field input:valid~span::before {
+	width: 100%;
+}
