chia các content của user ra riêng

--- a/public/uploads/preview.css
+++ b/public/uploads/preview.css
@@ -24,7 +24,7 @@
     white-space: nowrap;
 }
 .preview h2 .subtitle {
-    color: #1fb9b1;
+    color: #4eb1ac;
     font-size: 15px;
     text-overflow: ellipsis;
     white-space: nowrap;
