--- a/public/assets/css/style1.css
+++ b/public/assets/css/style1.css
@@ -81,14 +81,13 @@ body {
     display: flex;
     align-items: center;
     position: fixed;
-    top: 0;
+    left: 170px;
     right: 0;
+    top: 0;
     height: 70px;
     z-index: 100;
     min-width: 660px;
     transition: right .4s;
-    left: 169px;
-    right: 290px;
 }
 .topbar::before {
     content: "";
@@ -97,7 +96,7 @@ body {
     left: 0;
     right: 0;
     bottom: 0;
-    background: linear-gradient(90deg, #0a3c6e, #0278f5);
+    background: linear-gradient(90deg, #0a3c6e, #2872c2);
     z-index: -1;
 }
 
@@ -255,9 +254,8 @@ body {
 
 .main-container .menu-side {
     position: fixed;
-    border: 1px solid #ffff;
     right: 0;
-    top: 0;
+    top: 70px;
     bottom: 0;
     width: 290px;
     background-color: rgba(77, 157, 232, 0.3);
@@ -270,7 +268,8 @@ body {
     justify-content: space-between;
     height: 7%;
     padding: 10px;
-    border: 1px solid #ffff;
+    background-color: rgba(77, 157, 232, 0.4);
+
 }
 
 .main-container .menu-side .menu-button .button {
@@ -346,8 +345,8 @@ body {
 }
 
 .menu-song li h5 .subtitle {
-    font-size: 10px;
-    color: #ae8bff;
+    font-size: 12px;
+    color: #b9b8fa;
 }
 
 .menu-song li .bi {
