--- a/public/assets/css/style1.css
+++ b/public/assets/css/style1.css
@@ -189,7 +189,7 @@ body {
 
 .main-container {
     margin-top: 60px;
-    margin-left: 150px;
+    margin-left: 170px;
     margin-bottom: 100px;
 
 }
@@ -197,6 +197,8 @@ body {
 .main-slider {
     padding: 20px 40px;
     margin-right: 300px;
+    position: relative;
+    overflow: hidden;
 }
 
 .main-slider h2 {
@@ -208,7 +210,8 @@ body {
 .main-slider .list {
     display: flex;
     gap: 20px;
-    overflow: hidden;
+    /* overflow: hidden; */
+    transition: transform 0.5s ease;
 }
 
 .main-slider .list .item {
@@ -228,6 +231,7 @@ body {
 
 .main-slider .list .item img {
     width: 100%;
+    height: 160px;
     border-radius: 6px;
     margin-bottom: 10px;
 }
@@ -241,13 +245,48 @@ body {
     text-overflow: ellipsis;
 }
 
-.main-slider .list .item p {
-    color: #989898;
-    font-size: 12px;
-    line-height: 20px;
-    font-weight: 600;
+.main-slider .prev-btn,
+.main-slider .next-btn {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    z-index: 1;
 }
 
+.main-slider .prev-btn {
+    left: 10px;
+}
+.main-slider .next-btn {
+    right: 10px;
+}
+.main-slider .prev-btn:hover,
+.main-slider .next-btn:hover {
+    background-color: rgba(255, 255, 255, 0.5);
+}
+
+.main-slider .list {
+    flex: 1;
+}
+.main-slider .list .item .follow-button {
+    margin: 10px 20px 10px 20px;
+    width: 120px;
+    bottom: 10px;
+    background-color: #54aec5;
+    color: #ffffff;
+    border: none;
+    border-radius: 4px;
+    padding: 8px 10px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.main-slider .list .item .follow-button:hover {
+    background-color: #3a8e9d;
+}
 .main-slider hr {
     margin: 70px 0px 0px;
     border-color: #636363;
