--- a/public/assets/css/style1.css
+++ b/public/assets/css/style1.css
@@ -14,20 +14,66 @@ body {
     background-attachment: fixed;
 }
 
+.dropdown {
+    display: inline-block;
+}
+.dropdown .dropbtn {
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    border-radius: 10rem;
+    cursor: pointer;
+    background: rgba(77, 157, 232, 0.2);
+    backdrop-filter: blur(4px) saturate(180%);
+}
+
+.dropdown:hover .dropbtn {
+    background-color: #2272e9;
+    transition: 1.4s ease-in-out;
+    border-radius: 10rem;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #fff;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+    right: 20px;
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown-content a:hover {
+    transition: 0.4s ease-in-out;
+    color: #fff;
+    background-color: #102C57;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
 .sidebar {
     position: fixed;
     left: 0;
     top: 0;
-    opacity: 1;
     bottom: 0;
+    z-index: 2;
     /* width: 196px; */
-    padding: 18px;
+    padding: 20px;
     font-family: "Roboto", sans-serif;
     background-image: repeating-radial-gradient(circle at left,
             transparent 0,
             #074173 100px),
         repeating-radial-gradient(#074173, #222831);
-
 
 }
 
@@ -87,7 +133,9 @@ body {
     z-index: 100;
     min-width: 660px;
     transition: right .4s;
+
 }
+
 .topbar::before {
     content: "";
     position: absolute;
@@ -95,34 +143,74 @@ body {
     left: 0;
     right: 0;
     bottom: 0;
-    background: linear-gradient(90deg, #0a3c6e, #2872c2);
     z-index: -1;
 }
 
 .topbar .search {
     width: 65%;
     margin: 0 auto;
-    display: flex;
 }
 
 .topbar .search .search-input {
-    width: 90%;
-    padding: 10px;
-    margin-right: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px  ;
+    background: transparent;
+    flex: 1;
+    border: 0;
+    outline: none;
+    padding: 24px 20px;
+    font-size: 20px;
+    color: #f7f7f7;
 }
 
-.topbar .search button {
-    width: 10%;
-    padding: 10px;
-    margin-right: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px 5px 5px 5px;
+.search-container {
+    position: relative;
+    width: 100%;
+    background-position: center;
+    background-size: cover;
+    margin-top: 3.1ch;
+
+}
+
+/* .search-button {
+    position: absolute;
+    right: 1%;
+    top: 50%; /* 
+    transform: translateY(-50%); /* }
+ */
+.search-bar {
+    width: 100%;
+    padding: 10px 20px;
+    max-width: 700px;
+    background: rgba(77, 157, 232, 0.2);
+    top: 50%;
+    border-radius: 60px;
+    align-items: center;
+    display: flex;
+    backdrop-filter: blur(4px) saturate(180%);
+
+}
+
+::placeholder {
+    color: #93c7ff;
+    font-weight: bold;
+    font-size: 12px;
+
+}
+
+.search-bar button img {
+    width: 30px;
+}
+
+.search-bar button {
+    width: 60px;
+    cursor: pointer;
+    height: 60px;
+    background: #0056b3;
+    border: 0;
+    border-radius: 50%;
 }
 
 .topbar .search button:hover {
-    background-color: #0056b3;
+    transition: 0.3s linear;
 }
 
 .topbar .navbar {
@@ -162,10 +250,11 @@ body {
     margin: 0px 20px;
     width: auto;
 }
-.topbar .navbar .btn
-{
+
+.topbar .navbar .btn {
     margin-right: 90px;
 }
+
 .topbar .navbar button {
     background-color: #0056b3;
     color: #fff;
@@ -193,8 +282,10 @@ body {
 }
 
 .main-slider {
-    padding: 20px 40px;
+    padding: 20px 40px; 
+     z-index: 1;
     margin-right: 300px;
+    overflow: hidden;
 }
 
 .main-slider h2 {
@@ -206,7 +297,10 @@ body {
 .main-slider .list {
     display: flex;
     gap: 20px;
-    overflow: hidden;
+    overflow-x: auto;
+    /* overflow: hidden; */
+    position: relative;
+    padding: 0;
 }
 
 .main-slider .list .item {
@@ -218,16 +312,20 @@ body {
             #0d0a36 0%,
             rgba(74, 74, 74, 0) 100%);
     transition: 0.5s all ease;
+    cursor: pointer;
+    
 }
 
 .main-slider .list .item:hover {
     background-color: #54aec5;
+    transform: translateY(-10px);
 }
 
 .main-slider .list .item img {
     width: 100%;
     border-radius: 6px;
     margin-bottom: 10px;
+    height: 190px;
 }
 
 .main-slider .list .item h4 {
@@ -235,7 +333,6 @@ body {
     font-size: 14px;
     margin-bottom: 10px;
     white-space: nowrap;
-    overflow: hidden;
     text-overflow: ellipsis;
 }
 
@@ -254,11 +351,15 @@ body {
 .main-container .menu-side {
     position: fixed;
     right: 0;
-    top: 70px;
-    bottom: 0;
+    top: 60px;
     width: 290px;
-    background-color: rgba(77, 157, 232, 0.3);
-
+    border: solid #fff 1px;
+    overflow-y: auto; 
+    height: 100vh; 
+}
+.main-container .menu-side::-webkit-scrollbar {
+    overflow-y: auto;
+    max-height: none;
 }
 
 .main-container .menu-side .menu-buttons {
@@ -267,21 +368,54 @@ body {
     justify-content: space-between;
     height: 7%;
     padding: 10px;
-    background-color: rgba(77, 157, 232, 0.4);
 
 }
+.main-slider .list::-webkit-scrollbar {
+    border-radius: 100px;
+    width: 10px;
+}
 
+.main-slider .list::-webkit-scrollbar-track {
+    background: #f1f1f1;
+    border-radius: 100px;
+}
+
+.main-slider .list::-webkit-scrollbar-thumb {
+    border-radius: 100px;
+    background: linear-gradient(45deg, #008DDA, #1b1f74);
+}
+
+.main-slider .list::-webkit-scrollbar-thumb:hover {
+    background: #93c7ff;
+}
 .main-container .menu-side .menu-button .button {
     flex: 1;
     margin: 0 5px;
 }
+.main-container .menu-side::-webkit-scrollbar {
+    width: 10px; /* Width of the scrollbar */
+}
 
+.main-container .menu-side::-webkit-scrollbar-track {
+    border-radius: 100px;
+    background: #df8080; /* Color of the track */
+}
+
+.main-container .menu-side::-webkit-scrollbar-thumb {
+    border-radius: 100px;
+    background: linear-gradient(45deg, #008DDA, #1b1f74);
+}
+
+.main-container .menu-side::-webkit-scrollbar-thumb:hover {
+    background: #93c7ff;
+}
 .playlist_button,
 .recent_button {
     width: 100%;
-    padding: 5px;
+    padding: 10px;
     color: #fff;
     border-radius: 40px;
+    border: 0;
     font-weight: 600;
     cursor: pointer;
     outline: none;
@@ -312,18 +446,18 @@ body {
     display: flex;
     align-items: center;
     margin-bottom: 10px;
-    cursor: pointer;
     transition: .3s linear;
 }
 
 .menu-song li:hover {
-    background: #54aec5;
+    background: #1b1f74;
+    border-radius: 20px;
 }
 
 .menu-song li span {
     font-size: 12px;
     font-weight: bold;
-    color: #ffff;
+    color: #fff;
 }
 
 .menu-song li img {
@@ -334,10 +468,10 @@ body {
 
 .menu-song li h5 {
     font-size: 14px;
-    color: #ffff;
+    color: #fff;
     margin-left: 15px;
     width: 170px;
-    /* border: 1px solid #ffff; */
+    /* border: 1px solid #fff; */
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
@@ -345,12 +479,62 @@ body {
 
 .menu-song li h5 .subtitle {
     font-size: 12px;
-    color: #b9b8fa;
+    color: #c4c4c4;
 }
 
 .menu-song li .bi {
-    color: #ffff;
+    color: #fff;
     position: absolute;
     right: 15px;
     font-size: 20px;
+}
+.main-slider .prev-btn,
+.main-slider .next-btn {
+    position: absolute;
+    top: 50%;    
+    transform: translateY(-50%);
+    background-color: transparent;
+    color: #ffffff;
+    border: none;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    z-index: 1;
+}
+.main-slider .next-btn {
+    right: 300px;
+}
+.main-slider .prev-btn
+{
+    left: 170px;
+}
+.main-slider .prev-btn,
+.main-slider .next-btn {
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    z-index: 1;
+}
+
+.main-slider .prev-btn:hover,
+.main-slider .next-btn:hover {
+    background-color: rgba(168, 168, 238, 0.5);
+}
+.main-slider .list .item .follow-button {
+    margin: 10px 20px 10px 20px;
+    width: 120px;
+    bottom: 10px;
+    background-color: #008DDA;
+    color: #ffffff;
+    border: none;
+    border-radius: 4px;
+    padding: 8px 10px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.main-slider .list .item .follow-button:hover {
+    background-color: #ffffff;
+    color: #008DDA;
+    font-weight: bold;
 }
